# Resource-DSL-Deploy

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE  README-Phase2.md  README-Phase3.md  README.md  Resource-DSL.cabal  TAGS  resource-dsl.tix  stack.yaml  test.tix
.hpc/: DSL.Expression.Test.mix  DSL.Model.Test.mix  Main.mix
.hpc/Resource-DSL-0.0.0-DwlIgnXat4wIEFT8aXxCWL/: DSL.Effect.mix  DSL.Environment.mix  DSL.Expression.Test.mix  DSL.Expression.mix  DSL.Model.mix  DSL.Primitive.mix  DSL.Profile.mix  DSL.Resource.mix
app/: Main.hs
json/: configuration-schema.json  definitions.json  dictionary-schema.json  dsl-schema.json  model-schema.json  requirements-schema.json  resources-schema.json
json/test/: s5e1-inventory.json  s5e1-request.json  swap-inventory-2for1-same.json  swap-inventory-2for1.json  swap-inventory-2ports.json  swap-inventory-austin.json  swap-inventory-equation.json  swap-inventory-group.json  swap-inventory-minimal.json  swap-inventory-range.json  swap-inventory-slow.json  swap-inventory-sync.json  swap-inventory.json  swap-request-2for1-1.json  swap-request-2for1-2.json  swap-request-2for1-same.json  swap-request-austin.json  swap-request-equation1.json  swap-request-equation2.json  swap-request-group.json  swap-request-group1.json  swap-request-group2.json  swap-request-group3.json  swap-request-minimal1.json  swap-request-minimal2.json  swap-request-minimal4.json  swap-request-minimal5.json  swap-request-range1.json  swap-request-range2.json  swap-request-range3.json  swap-request-slow.json  swap-request-sync2.json  swap-request0.json  swap-request1.json  swap-rules.json
json/test/austin/: bad-inventory.json  bad-request.json  bs5eNoThermo_iNoThermo-inventory.json  bs5eNoThermo_iNoThermo-request.json  s5e1-rules.json
json/test/debug/: bad-inventory.json  bad-request.json
scripts/: gitToSvn.sh
src/: Driver.hs
src/DSL/: .#Expression.hs  .#Resource.hs  Boolean.hs  Check.hs  Condition.hs  Driver.hs  Effect.hs  Effect.hs-boot  Env.hs  Environment.hs  Evaluation.hs  Expr.hs  Expression.hs  Model.hs  Model.hs-boot  Name.hs  Options.hs  Parser.hs  Path.hs  Predicate.hs  Preparation.hs  Pretty.hs  Primitive.hs  Profile.hs  Profile.hs-boot  Resource.hs  Row.hs  SAT.hs  Schemas.hs  SegList.hs  Semantics.hs  Serialize.hs  Sugar.hs  Syntax.hs  TestParser.hs  Type.hs  Types.hs  V.hs  VEnv.hs  Value.hs  (+1 more)
src/DSL/Example/: CrossApp-OLD.hs  CrossApp.hs  Location.hs  Network.hs  NewVerbsSaasm.hs  SwRI.hs  SwapDau.hs
src/DSL/Example/SwapDau/: Driver.hs  Encoding.hs  Search.hs  Serialize.hs  Types.hs
src/Data/: HMap.hs
src/Example/: Demo.hs  DemoDriver.hs  Location.hs  LocationDriver.hs  Stub.hs
test/: Tests.hs
test/DSL/Effect/: Test.hs
test/DSL/Evaluation/: Test.hs
test/DSL/Example/SwapDau/: Test.hs
test/DSL/Expression/: Test.hs
test/DSL/Model/: Test.hs
test/DSL/Parser/: Test.hs
test/DSL/Preparation/: Test.hs
test/DSL/Primitive/: Test.hs
test/DSL/Profile/: Test.hs
test/DSL/Resource/: Test.hs
test/DSL/SAT/: Test.hs
test/DSL/Serialize/: Test.hs
test/DSL/Test/: .#Effect.hs  Effect.hs  Env.hs  Serialize.hs
test/DSL/V/: Test.hs
test/DSL/Value/: Test.hs
test/DSL/Variational/: Test.hs
