name:          Resource-DSL
version:       0.0.0
homepage:      http://github.com/lambda-land/Resource-DSL/resource-dsl
license:       BSD3
author:        Eric Walkingshaw
maintainer:    walkiner@oregonstate.edu
category:      Language
build-type:    Simple
cabal-version: >= 1.22

source-repository head
  type:     git
  location: https://github.com/lambda-land/Resource-DSL-Deploy
  branch:   master

-- NOTE: sbv also requires z3 executable on PATH!
library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -W -Wredundant-constraints
  default-extensions:
      ConstraintKinds
    , DeriveDataTypeable
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , OverloadedStrings
  other-extensions:
      UndecidableInstances
  build-depends:
      base
    , aeson
    , aeson-better-errors
    , aeson-pretty
    , bytestring
    , composition
    , containers
    , directory
    , exceptions
    , filepath
    , json-schema
    , megaparsec
    , mtl
    , optparse-applicative
    , sbv
    , scientific
    , split
    , text
    , vector

  exposed-modules:
    DSL.Driver
    , DSL.Effect
    , DSL.Environment
    , DSL.Expression
    , DSL.Model
    , DSL.Name
    , DSL.Parser
    , DSL.Path
    , DSL.Predicate
    , DSL.Pretty
    , DSL.Primitive
    , DSL.Profile
    , DSL.Resource
    , DSL.SAT
    , DSL.SegList
    , DSL.Serialize
    , DSL.Sugar
    , DSL.Types
    , DSL.V
    , DSL.VEnv
    , DSL.Value
    , DSL.Example.Location
    , DSL.Example.Network
    , DSL.Example.CrossApp

executable resource-dsl
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
  default-extensions:
      OverloadedStrings
  build-depends:
      Resource-DSL
    , base

test-suite test
  hs-source-dirs:   test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      OverloadedStrings
  build-depends:
      Resource-DSL
    , base
    , aeson
    , aeson-better-errors
    , aeson-pretty
    , megaparsec
    , sbv
    , text
    , tasty
    , tasty-hunit
    , tasty-th
  other-modules:
      DSL.Parser.Test
    , DSL.Primitive.Test
    , DSL.SAT.Test
    , DSL.V.Test
    , DSL.Value.Test
