name:          Resource-DSL
version:       0.0.0
homepage:      http://github.com/lambda-land/Resource-DSL/resource-dsl
license:       BSD3
author:        Eric Walkingshaw
maintainer:    walkiner@oregonstate.edu
category:      Language
build-type:    Simple
cabal-version: >= 1.22

source-repository head
  type:     git
  location: https://github.com/lambda-land/Resource-DSL-Deploy
  branch:   master

-- NOTE: sbv also requires z3 executable on PATH!
-- TODO: refactor and remove -Wno-orphans option
library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -- -fprof-auto
    -Wall
    -Wredundant-constraints
    -Wno-missing-signatures
    -Wno-name-shadowing
    -Wno-orphans
    -Wno-unused-do-bind
    -W
  default-extensions:
      ConstraintKinds
    , DeriveDataTypeable
    , DeriveGeneric
    , DeriveTraversable
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , TupleSections
  other-extensions:
      UndecidableInstances
  build-depends:
      base
    , aeson
    , aeson-better-errors
    , aeson-pretty
    , bytestring
    , composition
    , containers
    , directory
    , exceptions
    , filepath
    , megaparsec
    , mtl
    , optparse-applicative
    , parser-combinators
    , scientific
    , split
    , text
    , vector
    , z3
  exposed-modules:
      DSL.Boolean
    , DSL.Condition
    , DSL.Driver
    , DSL.Environment
    , DSL.Evaluation
    , DSL.Parser
    , DSL.Path
    , DSL.Pretty
    , DSL.Primitive
    , DSL.SAT
    , DSL.Serialize
    , DSL.Sugar
    , DSL.Types
    , DSL.Variational
    , DSL.Example.CrossApp
    , DSL.Example.Location
    , DSL.Example.Network
    , DSL.Example.SwapDau
    , DSL.Example.SwapDau.Driver
    , DSL.Example.SwapDau.Encoding
    , DSL.Example.SwapDau.Search
    , DSL.Example.SwapDau.Serialize
    , DSL.Example.SwapDau.Types

executable resource-dsl
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fhpc
  default-extensions:
      OverloadedStrings
  build-depends:
      Resource-DSL
    , base

test-suite test
  hs-source-dirs:   test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      OverloadedStrings
  build-depends:
      Resource-DSL
    , base
    , aeson
    , aeson-better-errors
    , aeson-pretty
    , containers
    , megaparsec
    , text
    , tasty
    , tasty-hunit
    , tasty-th
  other-modules:
      DSL.Evaluation.Test
    , DSL.Example.SwapDau.Test
    , DSL.Parser.Test
    , DSL.Primitive.Test
    , DSL.SAT.Test
